force-app/main/default/objects/ucinn_ascendv2__Batch_Progress__e/ucinn_ascendv2__Batch_Progress__e.object-meta.xml
<CustomObject>
    <label>Batch Progress</label>
    <pluralLabel>Batch Progress</pluralLabel>
</CustomObject>