force-app/main/default/objects/ucinn_ascendv2__Batch_Progress__e/fields/ucinn_ascendv2__Context__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Context__c</fullName>
    <description>An identifier for the subscriber to use to find the events they are listening to.
Ex. an LWC monitoring a job could pass a UUID as Context and only listen to events whose Context matches that UUID.</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>