force-app/main/default/objects/ucinn_ascendv2__Batch_Progress__e/fields/ucinn_ascendv2__Details__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Details__c</fullName>
    <description>Arbitrary details to be passed along with the event, usually success payloads.</description>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>