force-app/main/default/objects/ucinn_ascendv2__Batch_Progress__e/fields/ucinn_ascendv2__Error__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>