force-app/main/default/objects/ucinn_ascendv2__Batch_Progress__e/fields/ucinn_ascendv2__Progress__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Progress__c</fullName>
    <label>Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>